# Obliquery

./: Cargo.toml  README.md  note.md
crates/obq-backend-gc/: Cargo.toml
crates/obq-backend-rss3/: Cargo.toml
crates/obq-backend-rss3/src/: constants.rs  lib.rs  rss3.rs  tests.rs
crates/obq-circuit/: Cargo.toml
crates/obq-cli/: Cargo.toml
crates/obq-cli/src/: main.rs
crates/obq-core/: Cargo.toml
crates/obq-core/src/: plan.rs
crates/obq-examples/: Cargo.toml
crates/obq-net/: Cargo.toml  build.rs
crates/obq-net/proto/: rss3.proto
crates/obq-net/src/: SharesStorage.rs  lib.rs  main.rs  network_lib.rs  tests.rs
crates/obq-pal/: Cargo.toml
crates/obq-runtime/: Cargo.toml
